<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/background_cardview_score"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/image_profile_background"
        android:contentDescription="@string/user_image"
        android:src="@drawable/ic_profile_icon" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/user_1"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/_10"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>