<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo"
    tools:context=".ui.score.ScoresFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/image_profile_background"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_profile_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/userButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/score_button_background"
                        android:text="@string/user"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:id="@+id/notificationButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/notificationbutton"
                        android:src="@drawable/ic_notification_icon" />

                    <ImageButton
                        android:id="@+id/settingsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/setting_button"
                        android:src="@drawable/ic_settings_icon" />

                </LinearLayout>

                    <Button
                        android:id="@+id/levelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/score_button_background"
                        android:text="@string/level"
                        android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/score"
            android:src="@drawable/ic_level_scores_icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            tools:listitem="@layout/item_score">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>