<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_success_failed">

    <ImageView
        android:id="@+id/successImage"
        android:layout_width="186dp"
        android:layout_height="137dp"
        android:layout_marginBottom="252dp"
        android:elevation="4dp"
        android:src="@drawable/ic_success_icon"
        app:layout_constraintBottom_toBottomOf="@+id/successCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/successCardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/indigo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/successText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="46dp"
                android:background="@drawable/background_cardview"
                android:gravity="center"
                android:text="@string/congratulations"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/score"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/maxScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/max_score"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonSuccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:background="@drawable/start_button_background"
                android:backgroundTint="@color/green"
                android:text="@string/play_new_level" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>