<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/failedCardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/indigo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/linearFailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/background_cardview"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/failedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/you_lost"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/failedDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/pass_this_level"
                        android:textColor="@color/scarlet"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/correctWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/green"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:text="TextView" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="46dp"
                android:text="@string/score"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/maxScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/max_score"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:background="@drawable/start_button_background"
                android:text="@string/start_again"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/failedImage"
        android:layout_width="186dp"
        android:layout_height="137dp"
        android:layout_marginBottom="-68dp"
        android:elevation="4dp"
        android:src="@drawable/ic_fail_icon"
        app:layout_constraintBottom_toTopOf="@+id/failedCardView"
        app:layout_constraintEnd_toEndOf="@id/failedCardView"
        app:layout_constraintStart_toStartOf="@id/failedCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>