<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.game.GameFragment">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="1116dp"
        android:layout_height="413dp"
        android:src="@drawable/game_screen_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/background_text"
        android:gravity="center_vertical"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:background="@drawable/ic_level_ellipse"
        android:gravity="center"
        android:text="@string/level_num"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/levelTextView"
        app:layout_constraintEnd_toStartOf="@+id/recyclerHeart"
        app:layout_constraintStart_toStartOf="@+id/levelTextView"
        app:layout_constraintTop_toTopOf="@+id/levelTextView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:src="@drawable/ic_filled_heart_icon"
        app:layout_constraintBottom_toBottomOf="@+id/levelTextView"
        app:layout_constraintEnd_toEndOf="@+id/levelTextView"
        app:layout_constraintTop_toTopOf="@+id/levelTextView" />


    <ImageView
        android:id="@+id/stepImage"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:src="@drawable/step1_icon"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/levelTextView"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/wordClueDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        tools:text="@string/hint"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />


    <TextView
        android:id="@+id/wordClue"
        android:layout_width="276dp"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        tools:text="@string/word"
        android:textAlignment="center"
        android:textColor="@color/oliv_drab"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wordClueDescription"/>

    <GridView
        android:id="@+id/gridViewAlphabet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="10"
        android:padding="5dp"
        android:verticalSpacing="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordClue" />

</androidx.constraintlayout.widget.ConstraintLayout>